# perfect-brief

./: .dockerignore  .env.dev  .env.example  .env.production  .env.staging  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTES.md  PLAN.md  README.md  RELEASING.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule-change-proposal.yml  rule_change.yml
.github/workflows/: ci.yml  codeql.yml  mirror-gitlab.yml  pages.yml  release.yml
app/: anthropic_client.py  cache.py  llm_client.py  main.py  models.py  scorer.py  settings.py
app/static/: index.html
docs/decisions/: 0001-cross-model-verification.md  0002-default-model-selection.md
perfect_brief/: __init__.py  judge.py  llm.py  loader.py  report.py  score.py  scoring.yaml
perfect_brief/fixtures/: 0001-weak.yaml  0002-reserved.yaml  0003-accepted.yaml  0004-blocked-brand.yaml  0005-adversarial.yaml  0006-generic-context.yaml
perfect_brief/rules/: accessibility-considered.yaml  anonymised.yaml  assumptions-risks.yaml  budget-floor.yaml  clear-title.yaml  constraints-tech.yaml  data-compliance.yaml  deliverables-concrete.yaml  (+6 more)
site/: article.md  console.html  index.html  rules.html  welance.css
tests/: conftest.py  test_api.py  test_fixtures.py  test_gate_contexts.py  test_models_endpoint.py  test_review.py  test_verifier_loop.py  test_verifier_resolution.py
(+8 files in other folders)
