[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfect-brief"
version = "1.3.0"
description = "Score a digital product brief against an open, versioned ruleset (LLM judges; code owns the numbers, the gate, and the decision)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Welance" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "redis>=5.0",
  "pyyaml>=6.0",
  "anthropic>=0.34",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "jsonschema>=4.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]

[project.scripts]
perfect-brief = "perfect_brief.report:_cli"

[tool.hatch.build.targets.wheel]
packages = ["perfect_brief", "app"]

[tool.hatch.build]
include = ["perfect_brief/**/*", "app/**/*"]

[tool.ruff]
line-length = 110
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
